<resources>
    <string name="app_name">SamBot App</string>
    <string name="blank" />
    <string name="about">About</string>
    <string name="todo">TODO</string>
    <string name="bluetooth_connection">Bluetooth connection</string>
    <string name="marwane">Marwane</string>
    <string name="and">and</string>
    <string name="olivier_bleinc">Olivier Bleinc</string>
    <string name="App">App developped by : \n\n Marwane Ould-Ahmed</string>
    <string name="description">This app allows the user to control a robot directly from his phone to the robot via bluetooth. \nClick How to use to show instructions</string>
    <string name="back">Back</string>
    <string name="show_Ins">How to use</string>
    <string name="button_size">50dp</string>
    <string name="search">Search</string>
    <string name="round_corner">Round Corner</string>
    <string name="appaired_devices">Appaired Devices:</string>
    <string name="bt_image">BT_image</string>
    <string name="adress">Adress</string>
    <string name="name">Name</string>
    <string name="auto">Auto</string>
    <string name="brightness">Adjust the brightness :</string>
    <string name="Welcome">Welcome to the Robot control app \nVer 1.1</string>
    <string name="arrowForward">arrow up</string>
    <string name="arrowLeft">arrow left</string>
    <string name="arrowBackward">arrow down</string>
    <string name="arrowRight">arrow right</string>
    <string name="text2edit">text2edit</string>
    <string name="speed">The speed is set to : 0</string>
    <string name="content_description_more">HIII</string>

    <string name="menu">Menu</string>

    <string name="direction">Direction</string>
    <string name="settings">Settings</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="instruction">Instruction</string>

    <string name="start">start</string>
    <string name="stop">stop</string>

</resources>
