<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:screenOrientation="landscape"
    android:layout_height="match_parent"
    tools:context="com.example.tryhome.Steering">

    <LinearLayout
        android:id="@+id/tableRow"
        android:layout_width="394dp"
        android:layout_height="412dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/imageButtonForward"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/arrow_forward"
            android:contentDescription="@string/arrowForward"
            android:padding="30dp"
            android:scaleType="fitCenter"
            android:text="@string/round_corner"
            android:textColor="#FFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="272dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButtonLeft"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_gravity="center_vertical|start"
                android:background="@drawable/arrow_left"
                android:contentDescription="@string/arrowLeft"
                android:padding="30dp"
                android:scaleType="fitCenter"
                android:text="@string/round_corner"
                android:textColor="#FFF" />

            <LinearLayout
                android:layout_width="248dp"
                android:layout_height="271dp">


                <Button
                    android:id="@+id/buttonStart"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/green_button"
                    android:scaleType="fitCenter" />

                <Button
                    android:id="@+id/buttonStop"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:layout_weight="1"
                    android:background="@drawable/red_button"
                    android:scaleType="fitCenter" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/imageButtonRight"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_gravity="center_vertical|end"
                android:background="@drawable/arrow_right"
                android:baselineAligned="false"
                android:contentDescription="@string/arrowRight"
                android:padding="30dp"
                android:scaleType="fitCenter"
                android:text="@string/round_corner"
                android:textColor="#FFF" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/imageButtonBack"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@drawable/arrow_back"
            android:contentDescription="@string/arrowBackward"
            android:padding="30dp"
            android:scaleType="fitCenter"
            android:text="@string/round_corner"
            android:textColor="#FFF" />

    </LinearLayout>

    <TextView
        android:id="@+id/Hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <SeekBar
        android:id="@+id/velocity"
        style="@android:style/Widget.SeekBar"
        android:layout_width="185dp"
        android:layout_height="79dp"
        android:orientation="vertical"
        android:rotation="270"
        android:thumb="@android:drawable/radiobutton_off_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.322"
        app:layout_constraintStart_toEndOf="@+id/tableRow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466" />

    <TextView
        android:id="@+id/velocityValue"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/speed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="@+id/velocity"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.506" />

</androidx.constraintlayout.widget.ConstraintLayout>
